--- a/index.html
+++ b/index.html
@@ -7,6 +7,28 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="hero">
+        <div class="header">
+            <p class="logo">Header logo</p>
+            <ul>
+                <li><a href="#">header link one</a></li>
+                <li><a href="#">header link two</a></li>
+                <li><a href="#">header link three</a></li>
+            </ul>
+        </div>
+        <div class="hero-content">
+            <div class="hero-text">
+                <div class="hero-main-text">This website is awesome</div>
+                <div class="hero-secondary-text">
+                    This website has some subtext that goes here under the main title. It's a smaller font
+                    and the color is lower contrast.
+                </div>
+                <button class="hero-button">Sign up</button>
+            </div>
+            <div class="hero-img">
+                this is a placeholder for an image 
+            </div>
+        </div>
+    </div>
 </body>
 </html>
