--- a/index.html
+++ b/index.html
@@ -30,5 +30,28 @@
             </div>
         </div>
     </div>
+
+    <div class="card-container">
+        <div class="card-header">Some random information.</div>
+        <div class="card-main">
+            <div class="card-content">
+                <div class="card"></div>
+                This is some subtext under an illustration or image
+            </div>
+            <div class="card-content">
+                <div class="card"></div>
+                This is some subtext under an illustration or image
+            </div>
+            <div class="card-content">
+                <div class="card"></div>
+                This is some subtext under an illustration or image
+            </div>
+            <div class="card-content">
+                <div class="card"></div>
+                This is some subtext under an illustration or image
+            </div>
+        </div>
+    </div>
+
 </body>
 </html>
