--- a/index.html
+++ b/index.html
@@ -53,5 +53,13 @@
         </div>
     </div>
 
+    <div class="quote-container">
+        <div class="quote">
+            <p>
+                When you arise in the morning think of what a privilege it is to be alive, to think, to enjoy, to love ...
+            </p>
+            <p class="author">-Marcus Aurelius</p>
+        </div>
+    </div>
 </body>
 </html>
