--- a/index.html
+++ b/index.html
@@ -61,5 +61,17 @@
             <p class="author">-Marcus Aurelius</p>
         </div>
     </div>
+
+    <div class="action-container">
+        <div class="action-box">
+            <div class="action-caption">
+                <div class="caption-text">Call to action! It's time!</div>
+                <div class="caption-caption">
+                    Sign up for our product by clicking that button right over there!
+                </div>
+            </div>
+            <button class="action-button">Sign up</button>
+        </div>
+    </div>
 </body>
 </html>
