--- a/index.html
+++ b/index.html
@@ -73,5 +73,9 @@
             <button class="action-button">Sign up</button>
         </div>
     </div>
+
+    <div class="footer">
+        <p>© 2021 The Odin Project</p>
+    </div>
 </body>
 </html>
